make sure attachment descriptions are left-aligned

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -113,3 +113,5 @@ a:hover {
 .p-galleria-item { background: black; }
 
 .p-contextmenu .p-menuitem-text { white-space: nowrap; }
+
+.p-button-link { text-align: left; }
